{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 751,
  "lineage": "137fc808-aa97-8fde-f812-c541eb78450e",
  "resources": [
    {
      "module": "module.RT_ASSOC_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02414ba6d4f5ba73d",
            "route_table_id": "rtb-077424e64b180c076",
            "subnet_id": "subnet-0de04a3d19747b10f"
          },
          "dependencies": [
            "module.internet_gw.aws_internet_gateway.gw",
            "module.public_route_table.aws_route_table.public_RT",
            "module.public_subnet1.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.RT_ASSOC_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8a37fb995642a6e",
            "route_table_id": "rtb-077424e64b180c076",
            "subnet_id": "subnet-07a3cfb68201a1286"
          },
          "dependencies": [
            "module.internet_gw.aws_internet_gateway.gw",
            "module.public_route_table.aws_route_table.public_RT",
            "module.public_subnet2.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.RT_ASSOC_3",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063711e1c3890f2aa",
            "route_table_id": "rtb-00f81eb95017d2970",
            "subnet_id": "subnet-07ffaf0e5e424d965"
          },
          "dependencies": [
            "module.elastic_ip1.aws_eip.eip",
            "module.natgw1.aws_nat_gateway.nat",
            "module.private_route_table1.aws_route_table.public_RT",
            "module.private_subnet1.aws_subnet.main",
            "module.public_subnet1.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.RT_ASSOC_4",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b18b7b992b2e08a5",
            "route_table_id": "rtb-00f81eb95017d2970",
            "subnet_id": "subnet-0ed085237c434ffcb"
          },
          "dependencies": [
            "module.elastic_ip1.aws_eip.eip",
            "module.natgw1.aws_nat_gateway.nat",
            "module.private_route_table1.aws_route_table.public_RT",
            "module.private_subnet3.aws_subnet.main",
            "module.public_subnet1.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.RT_ASSOC_5",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a50daeeb970d098",
            "route_table_id": "rtb-0d1829d49c76c8170",
            "subnet_id": "subnet-06ea7bf08f6eba778"
          },
          "dependencies": [
            "module.elastic_ip1.aws_eip.eip",
            "module.natgw1.aws_nat_gateway.nat",
            "module.private_route_table2.aws_route_table.public_RT",
            "module.private_subnet2.aws_subnet.main",
            "module.public_subnet1.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.RT_ASSOC_6",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fab3c09406753798",
            "route_table_id": "rtb-0d1829d49c76c8170",
            "subnet_id": "subnet-0bdd1f11111238a8f"
          },
          "dependencies": [
            "module.elastic_ip1.aws_eip.eip",
            "module.natgw1.aws_nat_gateway.nat",
            "module.private_route_table2.aws_route_table.public_RT",
            "module.private_subnet4.aws_subnet.main",
            "module.public_subnet1.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02716aeeabd1b71ce",
            "association_id": "eipassoc-07ee17a16121f4c32",
            "domain": "vpc",
            "id": "eipalloc-02716aeeabd1b71ce",
            "network_border_group": "us-east-1",
            "network_interface": "eni-022b516e33a065664",
            "private_dns": "ip-10-0-0-173.ec2.internal",
            "private_ip": "10.0.0.173",
            "public_dns": "ec2-44-207-52-132.compute-1.amazonaws.com",
            "public_ip": "44.207.52.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1-ndp24-dev"
            },
            "tags_all": {
              "Name": "eip1-ndp24-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.elastic_ip2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3d31165246804cb",
            "association_id": "eipassoc-06cfced1526950d86",
            "domain": "vpc",
            "id": "eipalloc-0d3d31165246804cb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-013a6fb203c68b1f8",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-54-163-166-202.compute-1.amazonaws.com",
            "public_ip": "54.163.166.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip2-ndp24-dev"
            },
            "tags_all": {
              "Name": "eip2-ndp24-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.internet_gw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:internet-gateway/igw-0f5d71487e510ca9a",
            "id": "igw-0f5d71487e510ca9a",
            "owner_id": "986335452080",
            "tags": {
              "ENV": "dev",
              "Name": "IGW-main-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "IGW-main-ndp24-dev"
            },
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.launch_code",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986335452080:loadbalancer/app/web-app-lb/58eea5b194ea6920",
            "arn_suffix": "app/web-app-lb/58eea5b194ea6920",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-app-lb-319878331.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:986335452080:loadbalancer/app/web-app-lb/58eea5b194ea6920",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ecfcef080b8458e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a3cfb68201a1286"
              },
              {
                "subnet_id": "subnet-0de04a3d19747b10f"
              }
            ],
            "subnets": [
              "subnet-07a3cfb68201a1286",
              "subnet-0de04a3d19747b10f"
            ],
            "vpc_id": "vpc-0ac845262301987d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.launch_code.aws_security_group.web_sg",
            "module.public_subnet1.aws_subnet.main",
            "module.public_subnet2.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.launch_code",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_app_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986335452080:listener/app/web-app-lb/58eea5b194ea6920/dd009f0fd9b6db31",
            "certificate_arn": "arn:aws:acm:us-east-1:986335452080:certificate/54d30d59-a154-4ebe-8e5b-e5036e9c1fb8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:986335452080:targetgroup/web-app-target-group/318a2a745bc92915",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:986335452080:listener/app/web-app-lb/58eea5b194ea6920/dd009f0fd9b6db31",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:986335452080:loadbalancer/app/web-app-lb/58eea5b194ea6920",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.launch_code.aws_lb.web_app_lb",
            "module.launch_code.aws_lb_target_group.web_app_target_group",
            "module.launch_code.aws_security_group.web_sg",
            "module.public_subnet1.aws_subnet.main",
            "module.public_subnet2.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.launch_code",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:986335452080:targetgroup/web-app-target-group/318a2a745bc92915",
            "arn_suffix": "targetgroup/web-app-target-group/318a2a745bc92915",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:986335452080:targetgroup/web-app-target-group/318a2a745bc92915",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.launch_code",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_app_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:security-group/sg-03cc228c1e72afbc6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cc228c1e72afbc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ecfcef080b8458e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ecfcef080b8458e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240219165944674500000003",
            "name_prefix": "terraform-",
            "owner_id": "986335452080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-app-instance-sg"
            },
            "tags_all": {
              "Name": "web-app-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.launch_code.aws_security_group.web_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.launch_code",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:security-group/sg-00ecfcef080b8458e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ecfcef080b8458e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240219165938196100000002",
            "name_prefix": "terraform-",
            "owner_id": "986335452080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.natgw1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02716aeeabd1b71ce",
            "association_id": "eipassoc-07ee17a16121f4c32",
            "connectivity_type": "public",
            "id": "nat-0c5e9cb7958adf6f8",
            "network_interface_id": "eni-022b516e33a065664",
            "private_ip": "10.0.0.173",
            "public_ip": "44.207.52.132",
            "subnet_id": "subnet-0de04a3d19747b10f",
            "tags": {
              "Name": "natgw1-ndp24-dev"
            },
            "tags_all": {
              "Name": "natgw1-ndp24-dev"
            }
          },
          "dependencies": [
            "module.elastic_ip1.aws_eip.eip",
            "module.public_subnet1.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgw2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3d31165246804cb",
            "association_id": "eipassoc-06cfced1526950d86",
            "connectivity_type": "public",
            "id": "nat-056ed67f9812f580d",
            "network_interface_id": "eni-013a6fb203c68b1f8",
            "private_ip": "10.0.1.211",
            "public_ip": "54.163.166.202",
            "subnet_id": "subnet-07a3cfb68201a1286",
            "tags": {
              "Name": "natgw2-ndp24-dev"
            },
            "tags_all": {
              "Name": "natgw2-ndp24-dev"
            }
          },
          "dependencies": [
            "module.elastic_ip2.aws_eip.eip",
            "module.public_subnet2.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:route-table/rtb-00f81eb95017d2970",
            "id": "rtb-00f81eb95017d2970",
            "owner_id": "986335452080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c5e9cb7958adf6f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ENV": "dev",
              "Name": "Private-RT1-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "Private-RT1-ndp24-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ip1.aws_eip.eip",
            "module.natgw1.aws_nat_gateway.nat",
            "module.public_subnet1.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:route-table/rtb-0d1829d49c76c8170",
            "id": "rtb-0d1829d49c76c8170",
            "owner_id": "986335452080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c5e9cb7958adf6f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ENV": "dev",
              "Name": "Private-RT2-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "Private-RT2-ndp24-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ip1.aws_eip.eip",
            "module.natgw1.aws_nat_gateway.nat",
            "module.public_subnet1.aws_subnet.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:subnet/subnet-07ffaf0e5e424d965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ffaf0e5e424d965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986335452080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "dev",
              "Name": "backend-tier1-subnet-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "backend-tier1-subnet-ndp24-dev"
            },
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:subnet/subnet-06ea7bf08f6eba778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ea7bf08f6eba778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986335452080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "dev",
              "Name": "backend-tier2-subnet-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "backend-tier2-subnet-ndp24-dev"
            },
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:subnet/subnet-0ed085237c434ffcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed085237c434ffcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986335452080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "dev",
              "Name": "db-tier1-subnet-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "db-tier1-subnet-ndp24-dev"
            },
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet4",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:subnet/subnet-0bdd1f11111238a8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdd1f11111238a8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986335452080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "dev",
              "Name": "db-tier2-subnet-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "db-tier2-subnet-ndp24-dev"
            },
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:route-table/rtb-077424e64b180c076",
            "id": "rtb-077424e64b180c076",
            "owner_id": "986335452080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5d71487e510ca9a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ENV": "dev",
              "Name": "PUBLIC-RT-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "PUBLIC-RT-ndp24-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:subnet/subnet-0de04a3d19747b10f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de04a3d19747b10f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986335452080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "dev",
              "Name": "frontend-tier1-subnet-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "frontend-tier1-subnet-ndp24-dev"
            },
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:subnet/subnet-07a3cfb68201a1286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a3cfb68201a1286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986335452080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "dev",
              "Name": "frontend-tier2-subnet-ndp24-dev"
            },
            "tags_all": {
              "ENV": "dev",
              "Name": "frontend-tier2-subnet-ndp24-dev"
            },
            "vpc_id": "vpc-0ac845262301987d5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986335452080:vpc/vpc-0ac845262301987d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08762b7a07e4ce400",
            "default_route_table_id": "rtb-05def6b770e8a2cd2",
            "default_security_group_id": "sg-09a9d9fcd558de890",
            "dhcp_options_id": "dopt-063a32cc5cccc4e78",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac845262301987d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05def6b770e8a2cd2",
            "owner_id": "986335452080",
            "tags": {
              "Env": "dev",
              "Name": "main-vpc-ndp24-dev"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "main-vpc-ndp24-dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}